Added public and private snippets, UI improvements

--- a/ui/html/partials/nav.html
+++ b/ui/html/partials/nav.html
@@ -4,6 +4,7 @@
         <a href='/'>Home</a>
         {{if .IsAuthenticated}}
         <a href='/snippet/create'>Create snippet</a>
+        <a href='/snippets'>Your snippets</a>
         {{end}}
     </div>
     <div>
